Move to use ParceledListSlice
Flag: EXEMPT refactor
Bug: 349840058
Test: atest com.android.server.wifi
Change-Id: I5502e8d7b316912161f74662638fa7c3b65b0cf0